--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="container"> 
+    <img src="avatar-perfil.png" alt="avatar da ana">
     <p>Eu sou a Ana Picinato</p>
     <h1>Eu aprendo programação</h1>
+    <p>Eu sou a ana e sou uma estudante do colégio lúcia alves.
+        Faço vôlei no período da terde, cozinho comida que gosto.
+        Gosto de ouvir música e assistir filme\série.
+        Veja os projetos que já desenvolvi.</p>
+        <div>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>Scratch</p>
+        </div>
+    </header>
 </body>
 </html>
