--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header class="container"> 
-    <img src="avatar-perfil.png" alt="avatar da ana">
-    <p>Eu sou a Ana Picinato</p>
+    <img src="avatar-perfil.png" class="rownded-circle" width="150" height="150" alt="avatar da ana" srcset="">
+    <p class="lead">Eu sou a Ana Picinato</p>
     <h1>Eu aprendo programação</h1>
     <p>Eu sou a ana e sou uma estudante do colégio lúcia alves.
         Faço vôlei no período da terde, cozinho comida que gosto.
         Gosto de ouvir música e assistir filme\série.
         Veja os projetos que já desenvolvi.</p>
         <div>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-            <p>Scratch</p>
+            <p class="bage text-bg-secondary">HTML</p>
+            <P class="bage text-bg-secondary">CSS</P>
+            <P class="bage text-bg-secondary">JavaScript</P>
+            <p class="bage text-bg-secondary">Scratch</p>
         </div>
     </header>
 </body>
-</html>
+</HTML>
